# udemy-course-copilot

./: .gitignore  README.md  pyproject.toml
scripts/: extract_transcript.py  fetch_transcripts.py  generate_notes.py
