[project]
name = "udemy-course-copilot"
version = "0.1.0"
description = "Udemy Course Copilot — batch-download course transcripts and generate AI-enhanced study notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
]
